--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,22 @@ a {
     margin-bottom: 10px;
 }
 
+#formula {
+    margin-bottom: 20px;
+}
+
+#propositions {
+    margin: 20px 0;
+}
+
+#propositions li {
+    display: inline;
+    border-radius: 15px;
+    margin: 3px;
+    padding: 15px;
+    background-color: #0099CC;
+    box-shadow: 0 0 25px 0 #CCC;
+    color: #FFF;
+    cursor: pointer;
+    border: 2px solid #000;
+}
