--- a/css/style.css
+++ b/css/style.css
@@ -84,15 +84,23 @@ a {
     margin-bottom: 10px;
 }
 
-#formula {
-    margin-bottom: 20px;
+button, .btn-like {
+    padding: 15px 25px;
+    margin: 20px auto;
+    background-color: #0099CC;
+    border: 1px solid #000;
+    cursor: pointer;
+    box-shadow: 0 0 25px 0 #CCC;
+    border-radius: 10px;
+    color: #FFF;
+    font-family: "Main Font";
 }
 
-#propositions {
+input {
+    padding: 15px;
     margin: 20px 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+    border-radius: 10px;
+    box-shadow: 0 0 25px 0 #CCC;
 }
 
 /* HOME */
@@ -118,17 +126,18 @@ a {
     flex: 1;
 }
 
-.home-view a {
-    border: 1px solid #000;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 10px;
-    background-color: #0099CC;
-    color: #FFF;
-    cursor: pointer;
+/* GAMES */
+
+#formula {
+    margin-bottom: 20px;
 }
 
-/* GAMES */
+#propositions {
+    margin: 20px 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
 
 #propositions li {
     display: inline;
