--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: "Main Font";
-    src: url('../fonts/DK Butterfly Ball.otf');
+    src: url('../fonts/Champagne & Limousines.ttf');
 }
 
 html {
@@ -36,10 +36,13 @@ body *::first-letter {
     font-size: 1.5em;
 }
 
-h2 {
+h2, h3 {
     padding-bottom: 10px;
-    border-bottom: 1px solid #CCC;
     color: #0099CC;
+}
+
+h2 {
+    border-bottom: 1px solid #CCC;
 }
 
 a {
@@ -69,7 +72,7 @@ a {
     text-align: center;
 }
 
-#app h2 {
+#app h2, #app h3 {
     text-align: center;
     margin: 20px;
 }
@@ -85,7 +88,7 @@ a {
 }
 
 button, .btn-like {
-    padding: 15px 25px;
+    padding: 10px 25px;
     margin: 20px auto;
     background-color: #0099CC;
     border: 1px solid #000;
@@ -94,6 +97,8 @@ button, .btn-like {
     border-radius: 10px;
     color: #FFF;
     font-family: "Main Font";
+    font-size: 18px;
+    font-weight: bold;
 }
 
 input {
